--- a/Public/index.html
+++ b/Public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Timestamp API</title>
-  <link rel="stylesheet" type="text/css" href="Public/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
   <div>
